fix: menu option overflowing to the right when in phone resolution

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 /* Eric Meyer's Reset CSS v2.0 (simplified) */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
