--- a/styles/styles.css
+++ b/styles/styles.css
@@ -179,6 +179,7 @@ main {
     flex-direction: column;
     gap: var(--fluid-spacing-40x128);
     width: 100%;
+    max-width: 100vw;
 }
 
 .menu__welcome {
@@ -245,9 +246,12 @@ main {
 .menu__option-icon img {
     width: 100%;
     height: 100%;
+    min-width: var(--fluid-spacing-40x56);
 }
 
 .html-icon, .question__button {
+    display: grid;
+    place-items: center;
     width: var(--fluid-spacing-40x56);
     height: var(--fluid-spacing-40x56);
     background-color: var(--clr-orange50);
@@ -255,6 +259,8 @@ main {
 }
 
 .css-icon {
+    display: grid;
+    place-items: center;
     width: var(--fluid-spacing-40x56);
     height: var(--fluid-spacing-40x56);
     background-color: var(--clr-green100);
@@ -262,6 +268,8 @@ main {
 }
 
 .js-icon {
+    display: grid;
+    place-items: center;
     width: var(--fluid-spacing-40x56);
     height: var(--fluid-spacing-40x56);
     background-color: var(--clr-blue100);
@@ -269,6 +277,8 @@ main {
 }
 
 .access-icon {
+    display: grid;
+    place-items: center;
     width: var(--fluid-spacing-40x56);
     height: var(--fluid-spacing-40x56);
     background-color: var(--clr-purple100);
@@ -281,7 +291,8 @@ main {
     line-height: var(--lh-100);
     letter-spacing: 0%;
     margin: 0%;
-    width: clamp(20.4375rem, 61.7vw, 32.25rem);
+    max-width: clamp(20.4375rem, 61.7vw, 32.25rem);
+    width: 100%;
 }
 
 /* Question */
@@ -562,5 +573,5 @@ main {
 
 
 .hide {
-    display: none ;
+    display: none;
 }
